# ApexAutoCut

./: CMakeLists.txt  Detection.cpp  Detection.h  main.cpp
